# rollup

./: .babelrc  .editorconfig  .eslintignore  .eslintrc  .eslintrc.js  .eslintrc.json  .gitignore  .huskyrc  .jshintrc  .lintstagedrc  .lintstagedrc.js  .mocharc.json  .nycrc  .prettierignore  .prettierrc  .prettierrc.json  .tool-versions  .travis.yml  AGENTS.md  AGENTS.md~HEAD  ARCHITECTURE.md  CHANGELOG-0.md  CHANGELOG-1.md  CHANGELOG-2.md  CHANGELOG-3.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockunit.json  FUNDING.json  LABEL org.opencontainers.image.dockerfile  LICENSE  LICENSE-CORE.md  LICENSE.md  README.md  SECURITY.md  appveyor.yml  audit-resolve.json  azure-pipelines.yml  (+31 more)
.circleci/: config.yml
.devcontainer/: cd git  devcontainer.json
.github/: FUNDING.yml  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  labels.json
.github/ISSUE_TEMPLATE/: BUG.md  DOCS.md  FEATURE.md  MODIFICATION.md  SUPPORT.md  bug.yaml  docs.yaml  feature.yaml  (+1 more)
browser/: LICENSE.md  crypto.ts  error.ts  fs.js  fs.ts  hookActions.ts  package.json  path.js  path.ts  performance.ts  process.ts  promise.js  resolveId.ts  sander.js  typing.d.ts
build-plugins/: add-bin-shebang-and-esm-import.js  add-bin-shebang.js  add-cli-entry.js  add-cli-entry.ts  aliases.ts  clean-before-write.ts  conditional-fsevents-import.js  conditional-fsevents-import.ts  copy-native-files.ts  copy-types.ts  emit-file.ts  emit-module-package-file.js  emit-module-package-file.ts  emit-native-entry.ts  emit-wasm-file.ts  environment-replacement.ts  esm-dynamic-import.js  esm-dynamic-import.ts  external-native-import.ts  fix-acorn-es-import.js  fix-acorn-esm-import.js  fs-events-replacement.ts  generate-license-file.js  generate-license-file.ts  get-banner.ts  handle-import-meta-url.ts  json.ts  link-native-files.ts  load-cli-help.ts  replace-browser-modules.js  replace-browser-modules.ts  transform-ts-plugin-config-import.js
cli/: cli.ts  help.md  help.ts  index.ts  logging.ts
docs/: 00-introduction.md  01-command-line-reference.md  02-javascript-api.md  03-es-module-syntax.md  04-tutorial.md  05-plugin-development.md  05-plugins.md  06-faqs.md  07-tools.md  08-troubleshooting.md  09-migration.md  999-big-list-of-options.md  build-hooks.mmd  declarations.d.ts  hooks-legend.html  index.md  output-generation-hooks.mmd  repl.md  tsconfig.json  types.d.ts  vite.config.ts
docs-cn/: index.md  readme.md  tsconfig.json
guide/: 00-introduction.md  01-command-line-reference.md  05-plugins.md
native/: lib.js
patches/: @types+rimraf+3.0.2.patch  @vueuse+core+12.8.2.dev.patch  fixturify+3.0.0.patch  vitepress+1.6.4.dev.patch
rust/: Cargo.toml  rust-toolchain.toml
rust/bindings_napi/: Cargo.toml  build.rs
rust/bindings_napi/.cargo/: config.toml
rust/bindings_napi/src/: convert_ast.rs  lib.rs
rust/bindings_napi/src/convert_ast/: converter.rs  converter.ts
rust/bindings_wasm/: Cargo.toml
rust/bindings_wasm/.cargo/: config.toml
rust/bindings_wasm/src/: lib.rs
rust/parse_ast/: Cargo.toml
rust/parse_ast/src/: convert_ast.rs  error_emit.rs  lib.rs
rust/parse_ast/src/ast_nodes/: array_expression.rs  array_pattern.rs  arrow_function_expression.rs  assignment_expression.rs  assignment_pattern.rs  await_expression.rs  binary_expression.rs  block_statement.rs  break_statement.rs  call_expression.rs  catch_clause.rs  chain_expression.rs  class_body.rs  class_declaration.rs  class_expression.rs  conditional_expression.rs  continue_statement.rs  debugger_statement.rs  decorator.rs  directive.rs  do_while_statement.rs  empty_statement.rs  export_all_declaration.rs  export_default_declaration.rs  export_named_declaration.rs  export_specifier.rs  expression_statement.rs  for_in_statement.rs  for_of_statement.rs  for_statement.rs  function_declaration.rs  identifier.rs  if_statement.rs  import_attribute.rs  import_declaration.rs  import_default_specifier.rs  import_expression.rs  import_namespace_specifier.rs  import_specifier.rs  jsx_attribute.rs  (+62 more)
rust/parse_ast/src/ast_nodes/shared/: class_node.rs  function_node.rs  mod.rs
rust/parse_ast/src/convert_ast/: annotations.rs  converter.rs
rust/parse_ast/src/convert_ast/converter/: analyze_code.rs  ast_constants.rs  ast_macros.rs  node_types.rs  scope_constants.rs  string_constants.rs  utf16_positions.rs
scripts/: ast-types.js  ast-types.ts  build-bindings.js  check-release.js  check-typescript.sh  colors.js  copy-wasm-node.js  coverage-flush.cjs  coverage-flush.js  coverage-rust.sh  declarations.d.ts  find-config.js  generate-ast-converters.js  generate-ast-converters.ts  generate-ast-macros.js  generate-ast-macros.ts  generate-ast-to-buffer.ts  generate-ast-types.ts  generate-buffer-parsers.js  generate-buffer-parsers.ts  generate-buffer-to-ast.js  generate-buffer-to-ast.ts  generate-buffer-to-lazy-ast.ts  generate-child-node-keys.js  generate-child-node-keys.ts  generate-help-module.js  generate-keys.js  generate-node-ids.ts  generate-node-index.js  generate-node-index.ts  generate-node-type-strings.ts  generate-node-types.js  generate-node-types.ts  generate-node-unions.ts  generate-rust-constants.js  generate-rust-constants.ts  generate-scope-constants.ts  generate-string-constants.js  generate-string-constants.ts  helpers.js  (+20 more)
src/: Bundle.js  Bundle.ts  Chunk.ts  Declaration.js  ExternalChunk.ts  ExternalModule.js  ExternalModule.ts  Graph.d.ts  Graph.js  Graph.ts  JSONModule.js  Module.js  Module.ts  ModuleLoader.ts  Reference.js  Scope.js  Statement.js  Warning.js  WasmModule.ts  banner.js  browser-entry.js  browser-entry.ts  chunk-optimization.ts  interfaces.ts  lib.rs  node-entry.js  node-entry.ts  rollup.js  test.ts
test/: .eslintrc  mocha.opts  test.js  testHelpers.d.ts  testHelpers.js  testScope.js  tsconfig.base.json  tsconfig.json  tsconfig.utils.json  types.d.ts  utils.d.ts  utils.js
typings/: Chunk.d.ts  WebAssemblyjs.d.ts  declarations.d.ts  declarations.ts  declerations.d.ts  fsevents.d.ts  fsevents.ts  hash.js.d.ts  package.json.d.ts
wasm/: bindings_wasm.d.ts  bindings_wasm_bg.wasm.d.ts
(+18473 files in other folders)
