[package]
edition = "2021"
name = "rollup"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.71"
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.12.2", default-features = false, features = ["napi4"] }
napi-derive = "2.12.2"
regex = "1.9.1"
swc = "0.263.26"
swc_common = "0.31.16"
swc_ecma_ast = "0.106.6"
swc_ecma_parser = "0.136.8"

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
