[package]
name = "bindings_wasm"
version = "0.0.0"
edition = "2021"

[dependencies]
wasm-bindgen = "0.2.100"
parse_ast = { path = "../parse_ast" }
xxhash = { path = "../xxhash" }
js-sys = "0.3.77"
getrandom = { version = "0.2.15", features = ["js"] }
console_error_panic_hook = "0.1"

[lib]
crate-type = ["cdylib", "rlib"]
