[package]
name = "bindings_wasm"
version = "0.0.0"
edition = "2021"

[dependencies]
wasm-bindgen = "0.2.100"
parse_ast = { path = "../parse_ast" }
xxhash = { path = "../xxhash" }
js-sys = "0.3.77"
console_error_panic_hook = "0.1.7"

[lib]
crate-type = ["cdylib", "rlib"]

# Fix for rust 1.87.0, see https://github.com/rustwasm/wasm-pack/issues/1441#issuecomment-2886461752
[package.metadata.wasm-pack.profile.release]
wasm-opt = ["--enable-bulk-memory", "--enable-nontrapping-float-to-int"]
