[package]
name = "parse_ast"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.102"
swc_compiler_base = "58.0.0"
swc_config = "5.0.0"
swc_common = { version = "23.0.0", features = ["parking_lot"] }
swc_ecma_ast = "25.0.0"
swc_ecma_parser = "41.0.0"
parking_lot = "0.12.5"
