[package]
name = "parse_ast"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.104"
swc_compiler_base = "61.0.0"
swc_config = "5.0.0"
swc_common = { version = "24.0.0", features = ["parking_lot"] }
swc_ecma_ast = "26.0.0"
swc_ecma_parser = "42.0.0"
parking_lot = "0.12.5"
